Fixed the horizontal scrolling!

--- a/webapp/static/styles/login_style.css
+++ b/webapp/static/styles/login_style.css
@@ -11,8 +11,12 @@
 body {
 
 	background-image: url('../wiprobg.jpg');
+	background-repeat: no-repeat;
+	max-width: 100%;
+	overflow-x: hidden;
 	background-size: cover;
 	opacity: 0.95;
+
 
 }
 
